--- a/Runtime_ UserScene/Main/Base.lproj/Main.storyboard
+++ b/Runtime_ UserScene/Main/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,7 +12,6 @@
         <!--Navigation Controller-->
         <scene sceneID="GbW-Lk-nYg">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gOY-i2-W3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="njy-Jr-tXQ" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Sum-y9-Vyj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -21,6 +21,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="bYu-fI-PYS"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gOY-i2-W3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-679" y="139"/>
         </scene>
@@ -44,7 +45,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="day-jl-9RC">
-                                <rect key="frame" x="142" y="138" width="90" height="38"/>
+                                <rect key="frame" x="123" y="138" width="109" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="交换方法"/>
@@ -53,16 +54,22 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bdm-QY-l8O">
-                                <rect key="frame" x="142" y="190" width="90" height="38"/>
+                                <rect key="frame" x="123" y="190" width="109" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="分类添加属性"/>
+                                <connections>
+                                    <action selector="addProperty:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VUs-J6-pvi"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CtZ-5O-45p">
-                                <rect key="frame" x="142" y="240" width="90" height="38"/>
+                                <rect key="frame" x="123" y="240" width="109" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="私有属性方法"/>
+                                <connections>
+                                    <action selector="getPrivate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z5k-k7-WHZ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zo7-NP-kyA">
                                 <rect key="frame" x="142" y="293" width="90" height="38"/>
